# commentater

./: .gitignore  Cargo.toml  create_test_db.sh  docker-compose.yml  migrate.sh
fixtures/: example-solaris-page.htm
migrations/: 000_initial.sql  001_add_error_to_queue.sql  002_api_key_as_login.sql  003_world_user_id_not_null.sql  004_world_user_id_world_id_unique.sql  005_article_store_worldanvil_id.sql  006_user_queue_unique.sql  007_article_wa_id_unique.sql  008_article_queue_indices.sql
src/: article_updater.rs  dateutil.rs  err.rs  lib.rs  log_config.rs  parser.rs  req.rs  response.rs  templates.rs
src/auth/: mod.rs
src/db/: article.rs  comments.rs  mod.rs  pgacquire.rs  query.rs  queue.rs  schema.rs  test_queries.rs  user.rs  world.rs
src/routes/: article.rs  login.rs  mod.rs
src/worldanvil_api/: mod.rs  schema.rs
templates/: article.html  base.html  home.html  list_articles.html  loggedin.html  login.html  queue_all_articles.html  queue_one_article.html
