[package]
name = "commentater"
version = "0.1.0"
edition = "2021"

[lib]
name = "libtater"
path = "src/lib.rs"

[[bin]]
name = "server"

[[bin]]
name = "create_test_data"

[[bin]]
name = "articlewatch"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.8.3", features = ["macros"] }
base64 = "0.22.1"
dotenv = "0.15.0"
itertools = "0.13.0"
lazy_static = "1.5.0"
log = "0.4.22"
regex = "1.10.6"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version="1.0.208", features = ["derive"] }
simplelog = "0.12.2"
scraper = "0.20.0"
sqlx = { version = "0.8.0", features = ["runtime-tokio", "postgres", "derive", "migrate", "time"] }
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros", "signal"] }
time = { version = "0.3.36", features = ["macros", "parsing", "serde"] }
thiserror = "1.0.63"
url = "2.5.2"
serde_json = "1.0.140"
tera = { version = "1.20.0", features = ["builtins"] }
const_format = "0.2.34"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["normalize-path"] }
tower-sessions = "0.14.0"
tower-sessions-core = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
axum-extra = { version = "0.10.1", features = ["form"] }
